--- a/reference/textfield/index.styl
+++ b/reference/textfield/index.styl
@@ -6,12 +6,16 @@
   spectrum-textfield()
 }
 
+.spectrum-Textfield--quiet {
+  spectrum-textfield--quiet()
+}
+
 .spectrum-Textfield--multiline {
   spectrum-textfield--multiline()
 }
 
-.spectrum-Textfield--quiet {
-  spectrum-textfield--quiet()
+.spectrum-Textfield--quiet + spectrum-Textfield--multiline {
+  spectrum-textfield--quiet--multiline()
 }
 
 @import 'light.styl'
